fix: mobile play mode icon align style

--- a/src/styles/audioListsPanel.less
+++ b/src/styles/audioListsPanel.less
@@ -91,6 +91,9 @@
       font-weight: 500;
       transition: color @common-animate-time;
     }
+    &-num {
+      margin-left: 10px;
+    }
     &-actions {
       display: flex;
       flex-grow: 1;
